--- a/plugins/dockers/recorder/recorder_profile_settings.ui
+++ b/plugins/dockers/recorder/recorder_profile_settings.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>406</width>
-    <height>335</height>
+    <width>617</width>
+    <height>454</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Edit profile</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
      <item>
       <widget class="QLabel" name="labelTitleProfileSettings">
@@ -39,14 +39,141 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="1" column="0">
     <widget class="Line" name="line1">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item>
+   <item row="4" column="0">
+    <widget class="QStackedWidget" name="stackedWidget">
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
+     <widget class="QWidget" name="pageArguments">
+      <layout class="QGridLayout" name="gridLayout_3">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item row="0" column="0">
+        <widget class="QPlainTextEdit" name="editFfmpegArguments">
+         <property name="documentTitle">
+          <string notr="true"/>
+         </property>
+         <property name="plainText">
+          <string notr="true"/>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1">
+         <item>
+          <widget class="QLabel" name="labelTitleSupportedVariables">
+           <property name="text">
+            <string comment="Title: variables for FFMpeg arguments">Insert variable:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="labelSupportedVariables">
+           <property name="text">
+            <string notr="true">&lt;a href=&quot;$IN_FPS&quot;&gt;$IN_FPS&lt;/a&gt;
+&lt;a href=&quot;$OUT_FPS&quot;&gt;$OUT_FPS&lt;/a&gt;
+&lt;a href=&quot;$WIDTH&quot;&gt;$WIDTH&lt;/a&gt;
+&lt;a href=&quot;$HEIGHT&quot;&gt;$HEIGHT&lt;/a&gt;
+&lt;a href=&quot;$FRAMES&quot;&gt;$FRAMES&lt;/a&gt;
+&lt;a href=&quot;$INPUT_DIR&quot;&gt;$INPUT_DIR&lt;/a&gt;
+</string>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
+           <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="pagePreview">
+      <layout class="QGridLayout" name="gridLayout_4">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item row="0" column="0">
+        <widget class="QPlainTextEdit" name="editPreview">
+         <property name="textInteractionFlags">
+          <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="Line" name="line2_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0">
+     <item>
+      <widget class="QLabel" name="labelTitleFFMpegArguments">
+       <property name="text">
+        <string>FFMpeg arguments:</string>
+       </property>
+       <property name="buddy">
+        <cstring>editFfmpegArguments</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="checkPreview">
+       <property name="text">
+        <string>Preview</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="2" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
      <property name="leftMargin">
       <number>9</number>
@@ -68,7 +195,11 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="editProfileName"/>
+      <widget class="QLineEdit" name="editProfileName">
+       <property name="maxLength">
+        <number>64</number>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="labelFileExt">
@@ -84,82 +215,19 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="editFileExtension"/>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QLabel" name="labelTitleFFMpegArguments">
-     <property name="text">
-      <string>FFMpeg arguments:</string>
-     </property>
-     <property name="buddy">
-      <cstring>editFfmpegArguments</cstring>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="widgetFfmpegArguments" native="true">
-     <layout class="QGridLayout" name="gridLayout">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item row="0" column="0" rowspan="2">
-       <widget class="QPlainTextEdit" name="editFfmpegArguments"/>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1">
-     <item>
-      <widget class="QLabel" name="labelTitleSupportedVariables">
-       <property name="text">
-        <string comment="Title: variables for FFMpeg arguments">Supported variables:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="labelSupportedVariables">
-       <property name="text">
-        <string notr="true">$FPS $WIDTH $HEIGHT</string>
+      <widget class="QLineEdit" name="editFileExtension">
+       <property name="maxLength">
+        <number>15</number>
        </property>
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <widget class="Line" name="line2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>editProfileName</tabstop>
   <tabstop>editFileExtension</tabstop>
-  <tabstop>editFfmpegArguments</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -170,8 +238,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>257</x>
-     <y>325</y>
+     <x>266</x>
+     <y>428</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -186,8 +254,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>325</x>
-     <y>325</y>
+     <x>334</x>
+     <y>428</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
